--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 coverage.*
 *.coverprofile
 profile.cov
+escape-analysis.txt
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
@@ -33,3 +34,7 @@ go.work.sum
 
 # Binaries
 bin/
+
+# Log files
+logs/
+*.log
