--- a/config/local.yml
+++ b/config/local.yml
@@ -8,3 +8,10 @@ ems:
   url: http://localhost:8080
 pms:
   url: http://localhost:8081
+  database:
+    host: localhost
+    port: 5432
+    user: postgres
+    password: postgres
+    dbname: seq
+    sslmode: disable  # disable, allow, prefer, require, verify-ca, verify-full
